--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"@docusaurus/tsconfig": "^3.9.2",
 		"@docusaurus/types": "^3.9.2",
 		"typescript": "~5.6.2",
-		"wrangler": "^4.51.0"
+		"wrangler": "^4.59.1"
 	},
 	"browserslist": {
 		"production": [
@@ -52,5 +52,9 @@
 	},
 	"engines": {
 		"node": ">=18.0"
+	},
+	"overrides": {
+		"qs": ">=6.14.1",
+		"lodash": ">=4.17.23"
 	}
 }
